--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+ @import "./reset.scss";
+
+ /* Core */
+ @import "./app.scss";
+ @import "./navbar.scss";
