Add shadow to navbar

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -5,6 +5,9 @@ h1 {
 .nav-bar {
   background-color: white;
   padding: 30px;
+  box-shadow: 0px 0px 10px gray;
+  float: left;
+  z-index: 2;
 }
 
 .links {
