--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -35,7 +35,7 @@ h2 {
 
 img {
   width: 100%;
-  // height: 100%;
+  height: 100%;
 }
 
 .fb-post-li-long, .fb-post-li-short, .title {
@@ -75,4 +75,34 @@ $lines-to-show: 3;
 
 p {
   margin-top: 20px;
+}
+
+@media screen and (max-width: 1300px) {
+  .post-index ul li {
+    height: 38%;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .post-index ul li {
+    height: 35%;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .post-index ul li {
+    height: 30%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .post-index ul li {
+    height: 25%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .post-index ul li {
+    height: 22%;
+  }
 }
