Adjust posts and responsivity

--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -28,11 +28,12 @@ img {
   clear: both;
 }
 
-html,body
+html
 {
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden;
+    min-height: 100%;
 }
