--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -2,6 +2,11 @@
   display: flex;
   position: relative;
   width: 100%;
+  height: 100vh;
+}
+
+.post-index {
+  width: 95%;
 }
 
 .post-index ul {
@@ -57,8 +62,7 @@ $lines-to-show: 3;
 .fb-post {
   display: block; /* Fallback for non-webkit */
   display: -webkit-box;
-  // height: auto;
-  // height: $font-size*$line-height*$lines-to-show; /* Fallback for non-webkit */
+  height: $font-size*$line-height*$lines-to-show; /* Fallback for non-webkit */
   margin: 0 auto;
   font-size: $font-size;
   line-height: $line-height;
@@ -81,6 +85,7 @@ p {
   .post-index ul li {
     height: 38%;
   }
+
 }
 
 @media screen and (max-width: 1100px) {
@@ -101,8 +106,28 @@ p {
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
   .post-index ul li {
-    height: 22%;
+    height: 20%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .nav-bar {
+    display: none;
+  }
+
+  .app {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .post-index ul li {
+    width: 100%;
+    height: 50%;
+  }
+
+  .fb-post {
+    font-size: 19px;
   }
 }
