--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -3,6 +3,8 @@ h1 {
 }
 
 .nav-bar {
+  width: 5%;
+  height: 91.5vh;
   background-color: white;
   padding: 30px;
   box-shadow: 0px 0px 10px gray;
@@ -17,7 +19,7 @@ h1 {
 }
 
 .links > li {
-  margin: 60% 0px;
+  margin: 4.5vh 0px;
   height: 20px;
   width: 20px;
   transform: rotate(45deg);
