--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -19,6 +19,11 @@
 .post-index ul li {
   float: left;
   height: 45%;
+  cursor: pointer;
+}
+
+.post-index ul li:hover {
+  box-shadow: 0px 0px 10px black;
 }
 
 .ig-photo-li {
@@ -104,12 +109,27 @@ p {
   .post-index ul li {
     height: 25%;
   }
+
+  .fb-post {
+    display: block; /* Fallback for non-webkit */
+    display: -webkit-box;
+    height: 14px*$line-height*$lines-to-show; /* Fallback for non-webkit */
+    margin: 0 auto;
+    font-size: 14px;
+    line-height: $line-height;
+    -webkit-line-clamp: $lines-to-show;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 30px;
+  }
 }
 
 @media screen and (max-width: 650px) {
   .post-index ul li {
     height: 20%;
   }
+
 }
 
 @media screen and (max-width: 500px) {
@@ -123,11 +143,24 @@ p {
   }
 
   .post-index ul li {
-    width: 100%;
-    height: 50%;
+    float: left;
+    width: 50%;
+    height: 30%;
   }
 
+
   .fb-post {
-    font-size: 19px;
+    display: block; /* Fallback for non-webkit */
+    display: -webkit-box;
+    height: $font-size*$line-height*$lines-to-show; /* Fallback for non-webkit */
+    margin: 0 auto;
+    font-size: $font-size;
+    line-height: $line-height;
+    -webkit-line-clamp: $lines-to-show;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 50px;
   }
+
 }
