--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -16,14 +16,16 @@
   position: absolute;
 }
 
-.post-index ul li {
+.post-index li {
   float: left;
   height: 45%;
   cursor: pointer;
 }
 
-.post-index ul li:hover {
+.post-index li:hover {
+  z-index: 3;
   box-shadow: 0px 0px 10px black;
+  opacity: 0.8;
 }
 
 .ig-photo-li {
@@ -82,7 +84,7 @@ $lines-to-show: 3;
   margin: 50px;
 }
 
-p {
+.title p {
   margin-top: 20px;
 }
 
