--- a/app/assets/stylesheets/navbar_modal.scss
+++ b/app/assets/stylesheets/navbar_modal.scss
@@ -24,6 +24,73 @@
 }
 
 .nav-title {
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
+}
+
+.links li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.links p {
+  font-size: 12px;
+  font-family: "SimplonMono-Medium";
+  cursor: pointer;
+}
+
+
+.nav-bar-modal .links li:hover > div {
+  -webkit-animation-name: spin;
+  -webkit-animation-duration: 4000ms;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  -moz-animation-name: spin;
+  -moz-animation-duration: 4000ms;
+  -moz-animation-iteration-count: infinite;
+  -moz-animation-timing-function: linear;
+  -ms-animation-name: spin;
+  -ms-animation-duration: 4000ms;
+  -ms-animation-iteration-count: infinite;
+  -ms-animation-timing-function: linear;
+
+  animation-name: spin;
+  animation-duration: 4000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@-ms-keyframes spin {
+    from { -ms-transform: rotate(0deg); }
+    to { -ms-transform: rotate(360deg); }
+}
+@-moz-keyframes spin {
+    from { -moz-transform: rotate(0deg); }
+    to { -moz-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
+
+.nav-bar-modal .links {
+  margin: 20px;
+}
+
+.nav-bar-modal .links li div {
+  margin: 3vh 0;
+}
+
+.nav-bar-modal .links li:hover > p {
+  text-decoration: underline;
 }
