--- a/app/assets/stylesheets/navbar_modal.scss
+++ b/app/assets/stylesheets/navbar_modal.scss
@@ -1,11 +1,22 @@
 .navbar-modal {
-  background: linear-gradient( 90deg, rgba(85, 105, 123, 0.7), rgba(85, 105, 123, 0.4));
-  border: 10px solid black;
+  color: white;
+  text-align: center;
   width: 30%;
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 55%;
   transform: translate(-50%, -50%);
+  text-shadow: 0px 0px 20px black;
+}
+
+.navbar-modal h2 {
+  font-family: "SimplonMono-Bold";
+  margin-bottom: 20px;
+}
+
+.navbar-modal {
+  font-family: "SimplonNorm-Regular";
+  line-height: 30px;
 }
 
 .nav-bar-modal {
@@ -15,7 +26,16 @@
   box-shadow: 0px 0px 10px gray;
   float: left;
   z-index: 2;
+  transform: translateX(10%);
+  transition: transform 0.3s ease-in-out;
 }
+
+// .nav-bar-modal .full-nav {
+//   position: absolute;
+//   left: -8%;
+//   transform: translateX(100%);
+//   transition: transform 0.3s ease-in-out;
+// }
 
 .nav-title h1{
   font-size: 20px;
