--- a/app/assets/stylesheets/post_modal.scss
+++ b/app/assets/stylesheets/post_modal.scss
@@ -5,7 +5,9 @@
 .post {
   background: white;
   border: 10px solid black;
-  width: 30%;
+  width: 40%;
+  height: 90vh;
+  overflow:auto;
   position: absolute;
   top: 50%;
   left: 75%;
