--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -27,25 +27,7 @@ body {
   position: relative;
 }
 
-.post-index ul li i {
-  z-index: 2;
-  font-size: 24px;
-  position: absolute;
-}
-
-.fb-post-li-short i,
-.ig-photo-li i {
-  top: 90%;
-  left: 90%;
-}
-
-.fb-post-li-long > i {
-  left: 95%;
-  top: 90%;
-}
-
-.post-index li:hover {
-  z-index: 3;
+.post-index li:not(:first-child):hover {
   box-shadow: 0px 0px 10px black;
   opacity: 0.8;
 }
@@ -114,6 +96,21 @@ $lines-to-show: 3;
   display: none;
 }
 
+.post-index ul li i {
+  font-size: 24px;
+  position: absolute;
+}
+
+.fb-post-li-short i,
+.ig-photo-li i {
+  top: 90%;
+  left: 90%;
+}
+
+.fb-post-li-long > i {
+  left: 95%;
+  top: 90%;
+}
 
 @media screen and (max-width: 1300px) {
   .post-index ul li {
