Add photo to fb posts

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,1 +1,7 @@
+<script type="text/javascript">
+  window.images = {
+    fbPhoto: "<%= image_path("js_home.png") %>"
+  }
+</script>
+
 <main id="root"></main>
