--- a/app/assets/stylesheets/post_modal.scss
+++ b/app/assets/stylesheets/post_modal.scss
@@ -36,3 +36,21 @@
   left: 35%;
   cursor: pointer;
 }
+
+.post-modal-header {
+  display: flex;
+  align-items: center;
+}
+
+.post i {
+  padding: 10px;
+  font-size: 24px;
+}
+
+.post .fa-facebook-square {
+  color: #4267B2;
+}
+
+.post p {
+  font-family: "SimplonNorm-Regular";
+}
