--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -13,7 +13,13 @@ h1 {
   z-index: 2;
 }
 
-.full-nav div {
+.full-nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.nav-title-short {
   display: flex;
   align-items: center;
 }
@@ -21,7 +27,7 @@ h1 {
 .square {
   margin-bottom: 7.2px;
   width: 25px;
-  height: 25px;
+  height: 25px ;
   background: transparent;
   border: 5.5px solid black;
 }
