--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -1,39 +1,39 @@
 @font-face {
   font-family: "SimplonMono-Bold";
-  src: url('fonts/SimplonMono-Bold.otf') format('opentype');
+  src: asset-url('fonts/SimplonMono-Bold.otf') format('opentype');
 }
 
 @font-face {
   font-family: "SimplonMono-Regular";
-  src: url('fonts/SimplonMono-Regular.otf') format('opentype');
+  src: asset-url('fonts/SimplonMono-Regular.otf') format('opentype');
 }
 
 @font-face {
   font-family: "SimplonMono-Light";
-  src: url('fonts/SimplonMono-Light.otf') format('opentype');
+  src: asset-url('fonts/SimplonMono-Light.otf') format('opentype');
 }
 
 @font-face {
   font-family: "SimplonMono-Medium";
-  src: url('fonts/SimplonMono-Medium.otf') format('opentype');
+  src: asset-url('fonts/SimplonMono-Medium.otf') format('opentype');
 }
 
 @font-face {
   font-family: "SimplonNorm-Bold";
-  src: url('fonts/SimplonMono-Light.otf') format('opentype');
+  src: asset-url('fonts/SimplonMono-Light.otf') format('opentype');
 }
 
 @font-face {
   font-family: "SimplonNorm-Light";
-  src: url('fonts/SimplonNorm-Light.otf') format('opentype');
+  src: asset-url('fonts/SimplonNorm-Light.otf') format('opentype');
 }
 
 @font-face {
   font-family: "SimplonNorm-Medium";
-  src: url('fonts/SimplonNorm-Medium.otf') format('opentype');
+  src: asset-url('fonts/SimplonNorm-Medium.otf') format('opentype');
 }
 
 @font-face {
   font-family: "SimplonNorm-Regular";
-  src: url('fonts/SimplonNorm-Regular.otf') format('opentype');
+  src: asset-url('fonts/SimplonNorm-Regular.otf') format('opentype');
 }
