Change background colors

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1,5 +1,6 @@
 body {
   font-family: "SimplonNorm-Light";
+  background: linear-gradient( 90deg, rgba(232, 205, 210, 0.8), rgba(85, 105, 123, 1));
 }
 
 .app {
@@ -56,11 +57,14 @@ img {
 }
 
 .title, .fb-post-li-long {
-  background: linear-gradient( 90deg, rgba(232, 205, 210, 1), rgba(85, 105, 123, 0.5));
+  // background: linear-gradient( 90deg, rgba(232, 205, 210, 1), rgba(85, 105, 123, 0.5));
+  // background: linear-gradient( 90deg, rgba(232, 205, 210, 1),rgba(110,122,148, 0.8));
+  background: transparent;
 }
 
 .fb-post-li-short {
-  background: linear-gradient( 90deg, rgba(85, 105, 123, 0.4), rgba(85, 105, 123, 0.7));
+  // background: linear-gradient( 90deg, rgba(85, 105, 123, 0.4), rgba(85, 105, 123, 0.7));
+  background: transparent;
 }
 
 $font-size: 20px;
