--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -48,7 +48,7 @@ h1 {
 }
 
 .nav-bar .links li:hover > p {
-  display: inline;
+  display: inline-block;
   position: absolute;
   margin-top: 5vh;
 }
