Fix margin of post

--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -279,8 +279,7 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin: 30px;
-    margin-top: 50px;
+    margin: 40px 30px 30px 30px;
   }
 
   .fa-bars {
@@ -327,5 +326,4 @@
   .navbar-modal {
     left: 75%;
   }
-
 }
